--- a/freeradius/Dockerfile
+++ b/freeradius/Dockerfile
@@ -11,12 +11,12 @@ RUN apk add --update freeradius freeradius-mysql \
  && set -x \
  && sed -i "s/allow_vulnerable_openssl.*/allow_vulnerable_openssl = yes/" /etc/raddb/radiusd.conf \
  && sed -i "s/ipaddr = 127.0.0.1/ipaddr = 0.0.0.0\/0/" /etc/raddb/clients.conf \
- && sed -i 's/#	read_clients/	readclients/' /etc/raddb/clients.conf \
  && ln -s /etc/raddb/mods-available/sql /etc/raddb/mods-enabled/sql \
  && chmod 777 /var/log/radius/
 
 ADD config.sh /root/
 
+ENV DB_TYPE=mysql
 ENV DB_HOST_VALUE=localhost
 ENV DB_PORT_VALUE=3306
 ENV DB_USER_VALUE=radius
