--- a/http2proxy/nghttpx.conf
+++ b/http2proxy/nghttpx.conf
@@ -1,4 +1,4 @@
-frontend=0.0.0.0,port_temp
+frontend=*,port_temp
 backend=127.0.0.1,3128
 private-key-file=/etc/nghttpx/server.key
 certificate-file=/etc/nghttpx/server.crt
