--- a/ddns/Dockerfile
+++ b/ddns/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:alpine AS golang
 
 # Build
-ADD ddns.go /go/src/ddns
+ADD ddns.go /go/src/ddns/
 WORKDIR /go/src/ddns
 RUN go get ddns
 RUN go install
