--- a/ddns/Dockerfile
+++ b/ddns/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:1.15.6 AS golang
 # Build
 ADD . /go/src/ddns
 WORKDIR /go/src/ddns
-RUN go build
+RUN go build -o ddns
 
 FROM alpine
 LABEL maintainer="fevenor <fevenor@outlook.com>"
@@ -11,7 +11,7 @@ LABEL maintainer="fevenor <fevenor@outlook.com>"
 RUN apk add --no-cache ca-certificates
 
 # Copy bin
-COPY --from=golang /go/bin/ddns /usr/local/bin
+COPY --from=golang /go/src/ddns/ddns /usr/local/bin
 
 # DDNS environment variables
 ENV PORT 80
